[package]
name = "ethtrie"
version = "0.1.0"
authors = ["laizy <aochyi@126.com", "yejiayu <yejiayu.fe@gmail.com>"]
description = "Ethereum-compatible Merkle-Patricia Trie."
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum", "no_std"]
repository = "https://github.com/laizy/ethtrie"
homepage = "https://github.com/laizy/ethtrie"
documentation = "https://docs.rs/ethtrie"

[dependencies]
rlp = {version = "0.4.0", default-features = false}
hashbrown = {version = "0.12.0"}
ethereum-types = {version = "0.12", default-features = false }
tiny-keccak = {version = "2.0.2", default-features = false, features = ["keccak"]}

[dev-dependencies]
rand = "0.6.3"
hex = "0.3.2"
criterion = "0.2.10"
uuid = { version = "0.7", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false